the collection title offcenter fix mobile

--- a/css/cribbit-gang.css
+++ b/css/cribbit-gang.css
@@ -967,6 +967,11 @@ img {
     margin-top: 60px;
   }
 
+  .headingcollection {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+
   .paragraph {
     font-size: 14px;
   }
